# Project-Proteus

./: CMakeLists.txt  README.md  README_run.txt  run_server.bat
.github/workflows/: windows-release-package.yml
db/migrations/: 0008_behavioral_aggregation.sql
docs/: checkpoint_v1.md  query_identity.md  working_notes.md
include/: httplib.h
include/nlohmann/: json.hpp
include/proteus/ai/: pipeline_contracts.hpp
include/proteus/analytics/: behavior_aggregation.h
include/proteus/bandits/: contextual_bandit.hpp
include/proteus/bootstrap/: bootstrap_category.hpp  dimension_contract_registry.hpp  import_novel_query_artifact.hpp
include/proteus/content/: graph_contracts.hpp  in_memory_graph.hpp
include/proteus/inference/: belief_state.hpp  identity.hpp  likelihood_validation_params.hpp  novelty_hooks.hpp  question_selector.hpp  trace_log.hpp
include/proteus/llm/: illm_client.hpp  llm_cache_client.hpp  llm_types.hpp
include/proteus/llm/openai/: openai_responses_client.hpp
include/proteus/math/: deterministic_math.h
include/proteus/persistence/: schema.hpp  sqlite_db.hpp
include/proteus/playable/: canonicalize.hpp  feature_extractor.hpp  governor.hpp  http_server.hpp  prompt_cache.hpp  proposal.hpp  proposal_schema.hpp  proposal_selector.hpp  retrieval_engine.hpp  topology.hpp
include/proteus/query/: domain_synonyms_seed.hpp  query_identity.hpp
include/proteus/simulation/: entity.hpp
src/: main.cpp
src/analytics/: behavior_aggregation.cpp
src/bootstrap/: bootstrap_category.cpp  dimension_contract_registry.cpp  import_novel_query_artifact.cpp
src/cli/: run_20q_demo.cpp
src/content/: in_memory_graph.cpp
src/core/funnel/: bootstrap_prompt_composer.cpp  bootstrap_prompt_composer.h
src/core/semantic/: candidate_semantic_validator.cpp  candidate_semantic_validator.h
src/inference/: belief_state.cpp  identity.cpp  novelty_hooks.cpp  question_selector.cpp
src/llm/: llm_cache_client.cpp
src/llm/openai/: openai_responses_client.cpp
src/math/: deterministic_math.cpp
src/persistence/: schema.cpp  sqlite_db.cpp
src/playable/: canonicalize.cpp  feature_extractor.cpp  governor.cpp  http_server.cpp  prompt_cache.cpp  proposal_schema.cpp  proposal_selector.cpp  retrieval_engine.cpp  topology.cpp
src/proteus/responders/: deterministic_stub_responder.cpp  deterministic_stub_responder.h  i_responder.h  responder_manager.cpp  responder_manager.h  response_envelope.cpp  response_envelope.h  response_validation.cpp  response_validation.h
src/query/: domain_synonyms_seed.cpp  query_identity.cpp
src/simulation/: entity.cpp
tests/: test_behavior_aggregation_determinism.cpp  test_belief_state.cpp  test_bootstrap_prompt_composer.cpp  test_candidate_semantic_validator.cpp  test_db_raii.hpp  test_identity_inference.cpp  test_llm_bootstrap.cpp  test_openai_responses_client.cpp  test_playable_retrieval.cpp  test_query_identity.cpp
tests/integration/: test_responder_rerun_stability.cpp
tests/responders/: test_response_envelope.cpp  test_response_validation.cpp
web/: app.js  index.html  style.css
